完善了提交报销的后端，修正了初始化数据库脚本的超多语法错误，添加了储存上传的文件的目录，

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@
 /install/.installed
 web.config
 protected/model/CONFIG.php
+protected/file/img/*
+protected/file/declaration/*
+protected/file/invoice/*
+protected/file/transaction_voucher/*
