--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 /install/.installed
 web.config
 protected/model/CONFIG.php
-protected/file/img/*
-protected/file/declaration/*
-protected/file/invoice/*
-protected/file/transaction_voucher/*
+file/img/*
+file/declaration/*
+file/invoice/*
+file/transaction_voucher/*
